syntax = "proto3";

message CRDTManyMessages {
  string sceneId = 1;
  bytes	payload = 2;
}

message CRDTResponse {}

message CRDTStreamRequest {}

service CRDTService {
  rpc SendCRDT(CRDTManyMessages) returns (CRDTResponse){}
  rpc CRDTNotificationStream(CRDTStreamRequest) returns (stream CRDTManyMessages) {}
}
